--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,6 +3,11 @@ body {
     margin: 0;
 }
 
+.mainContainer {
+    margin-top: 15px;
+    margin-left: 5px;
+}
+
 .alert {
     background-color: #ff4545;
     margin: 50px;
