--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,9 +6,7 @@ body {
 }
 
 .mainContainer {
-    margin-top: 15px;
-    margin-bottom: 30px;
-    text-align: center;
+    margin-top: 15px  
     /* margin-left: 5px; */
 }
 
