--- a/src/components/CreateDish/CreateDish.css
+++ b/src/components/CreateDish/CreateDish.css
@@ -1,17 +1,20 @@
 .labelDiv {
-    font-size: 9pt;
-    color: #3f51b5;
+    font-size: 10pt;
+    color: #212121;
+    text-align: left;
 }
 
 .createDishDiv {
-    margin: 5px;
-    display: inline-flexbox;
+    margin:5px;
+    height: 100vmax;
+    overflow: scroll;
+    /* display: inline-flexbox; */
 }
 
 .selectDiv {
     font-size: 11pt;
-}
-.qtyDiv {
-    width: 20%;
-    font-size: 11pt;
+    width: 90%;
+    overflow: visible;
+    text-align: left;
+    /* height: 100vmax; */
 }
