Improve styling and UX of login page

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -18,18 +18,19 @@ body {
     margin: 50px;
 }
 
-form {
-    background-color: #dbd5d5;
-    width: 30%;
-    height: 250px;
-    margin: 20px auto;
-    padding: 25px;
-    border-radius: 2px;
-}
-
 input {
     margin: 5px;
     margin-bottom: 10px;
+}
+
+.loginDiv {
+    text-align: center;
+    height: 75vmax;
+    padding: 10px;
+}
+
+.loginInputs {
+    width: 225px;
 }
 
 .log-in, .log-out, .register {
